syntax = "proto3";

package package.v1;
option go_package = "package/v1;packagev1";

import "validate/validate.proto";
import "package/v1/topic.proto";

service TopicService {
    rpc CreateTopic(CreateTopicRequest) returns (CreateTopicResponse);
}

message CreateTopicRequest {
    string topic_title = 1 [(validate.rules).string = { min_len: 3, max_len: 30 }]; // required
}

message CreateTopicResponse {
    Topic topic = 1;
}